--- a/package.json
+++ b/package.json
@@ -14,31 +14,33 @@
 		"update": "npx ncu"
 	},
 	"dependencies": {
-		"@react-three/drei": "^9.109.2",
-		"@react-three/fiber": "^8.16.8",
-		"@react-three/postprocessing": "^2.16.2",
+		"@react-three/drei": "^9.114.3",
+		"@react-three/fiber": "^8.17.10",
+		"@react-three/postprocessing": "^2.16.3",
 		"classnames": "^2.5.1",
-		"next": "^14.2.5",
-		"postprocessing": "^6.36.0",
+		"immer": "^10.1.1",
+		"next": "^14.2.15",
+		"postprocessing": "^6.36.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-error-boundary": "^4.0.13",
-		"three": "^0.167.1"
+		"three": "^0.169.0",
+		"zustand": "^5.0.0-rc.2"
 	},
 	"devDependencies": {
-		"@types/node": "^20.14.14",
-		"@types/react": "^18.3.3",
+		"@types/node": "^22.7.5",
+		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.0",
-		"@types/three": "^0.167.1",
-		"@typescript-eslint/eslint-plugin": "^8.0.0",
-		"@typescript-eslint/parser": "^8.0.0",
+		"@types/three": "^0.169.0",
+		"@typescript-eslint/eslint-plugin": "^8.8.1",
+		"@typescript-eslint/parser": "^8.8.1",
 		"eslint": "8.57.0",
-		"eslint-config-next": "^14.2.5",
+		"eslint-config-next": "^14.2.15",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
-		"npm-check-updates": "^17.0.2",
+		"npm-check-updates": "^17.1.3",
 		"prettier": "^3.3.3",
-		"typescript": "^5.5.4",
+		"typescript": "^5.6.3",
 		"webpack-glsl-loader": "^1.0.1"
 	}
 }
