--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": false,
 	"engines": {
 		"npm": ">=10.0.0",
-		"node": ">=20.0.0"
+		"node": ">=22.0.0"
 	},
 	"scripts": {
 		"build": "next build",
@@ -14,33 +14,33 @@
 		"update": "npx ncu"
 	},
 	"dependencies": {
-		"@react-three/drei": "^9.114.3",
+		"@react-three/drei": "^9.120.4",
 		"@react-three/fiber": "^8.17.10",
 		"@react-three/postprocessing": "^2.16.3",
 		"classnames": "^2.5.1",
 		"immer": "^10.1.1",
-		"next": "^14.2.15",
-		"postprocessing": "^6.36.3",
+		"next": "^15.1.2",
+		"postprocessing": "^6.36.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-error-boundary": "^4.0.13",
-		"three": "^0.169.0",
-		"zustand": "^5.0.0-rc.2"
+		"react-error-boundary": "^5.0.0",
+		"three": "^0.170.0",
+		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
-		"@types/node": "^22.7.5",
+		"@types/node": "^22.10.2",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.0",
-		"@types/three": "^0.169.0",
-		"@typescript-eslint/eslint-plugin": "^8.8.1",
-		"@typescript-eslint/parser": "^8.8.1",
+		"@types/three": "^0.171.0",
+		"@typescript-eslint/eslint-plugin": "^8.18.2",
+		"@typescript-eslint/parser": "^8.18.2",
 		"eslint": "8.57.0",
-		"eslint-config-next": "^14.2.15",
+		"eslint-config-next": "^15.1.2",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
-		"npm-check-updates": "^17.1.3",
-		"prettier": "^3.3.3",
-		"typescript": "^5.6.3",
+		"npm-check-updates": "^17.1.12",
+		"prettier": "^3.4.2",
+		"typescript": "^5.7.2",
 		"webpack-glsl-loader": "^1.0.1"
 	}
 }
